--- a/keras/Analisa_Acuracia_Modelos.ipynb
+++ b/keras/Analisa_Acuracia_Modelos.ipynb
@@ -10,10 +10,10 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    }
   },
   "cells": [
     {
@@ -28,7 +28,7 @@
     },
     {
       "metadata": {
-        "id": "GwZFQ24g8XJh",
+        "id": "MKQ-ShcLWhxo",
         "colab_type": "code",
         "colab": {}
       },
@@ -44,79 +44,34 @@
     },
     {
       "metadata": {
-        "id": "QtLsMuB18zNF",
+        "id": "Hf3OlxHsWjUt",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 578
-        },
-        "outputId": "bd297578-b2ce-4f68-d803-14056e43b0fe"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/dataset.csv\n",
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/dataset_teste.csv\n",
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/dataset_treino.csv\n",
         "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.h5\n",
-        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.json\n"
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.json"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2019-01-29 23:33:22--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/dataset.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 26840 (26K) [text/plain]\n",
-            "Saving to: ‘dataset.csv’\n",
-            "\n",
-            "dataset.csv         100%[===================>]  26.21K  --.-KB/s    in 0.01s   \n",
-            "\n",
-            "2019-01-29 23:33:27 (2.60 MB/s) - ‘dataset.csv’ saved [26840/26840]\n",
-            "\n",
-            "--2019-01-29 23:33:28--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.h5\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 19608 (19K) [application/octet-stream]\n",
-            "Saving to: ‘model.h5’\n",
-            "\n",
-            "model.h5            100%[===================>]  19.15K  --.-KB/s    in 0.01s   \n",
-            "\n",
-            "2019-01-29 23:33:28 (1.93 MB/s) - ‘model.h5’ saved [19608/19608]\n",
-            "\n",
-            "--2019-01-29 23:33:29--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.json\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1826 (1.8K) [text/plain]\n",
-            "Saving to: ‘model.json’\n",
-            "\n",
-            "model.json          100%[===================>]   1.78K  --.-KB/s    in 0s      \n",
-            "\n",
-            "2019-01-29 23:33:29 (275 MB/s) - ‘model.json’ saved [1826/1826]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
-        "id": "zGLPXJF-8XJr",
+        "id": "WkU6ndhOWhxu",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "cf516f29-862b-4ccb-c489-1c7709793892"
+        "colab": {},
+        "outputId": "cd11c93e-4692-4ff6-8f4b-7cbac0f15e71"
       },
       "cell_type": "code",
       "source": [
         "df = pd.read_csv('dataset.csv')\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,19 +196,16 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
     {
       "metadata": {
-        "id": "CEM00gtf8XJ0",
+        "id": "NpuT6wzyWhx3",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "fa19cbad-58fb-4aa9-fb39-64174681f2c0"
+        "colab": {},
+        "outputId": "c8320cf8-3a06-4f71-85e0-dc0333a35160"
       },
       "cell_type": "code",
       "source": [
@@ -274,7 +226,7 @@
         "df['classe'] = classes\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,19 +351,16 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
     {
       "metadata": {
-        "id": "TQtA-jV28XJ6",
+        "id": "seUCanFXWhx9",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
-        },
-        "outputId": "d0fb8259-70e2-4014-ef65-8e602f37959d"
+        "colab": {},
+        "outputId": "7e9ddae2-d51d-4973-e7d6-7cdd1dc9e023"
       },
       "cell_type": "code",
       "source": [
@@ -419,7 +368,7 @@
         "X = df.loc[:, atributos].values\n",
         "X[:3]"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,25 +385,22 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
     {
       "metadata": {
-        "id": "R5dNQpoO8XJ_",
+        "id": "dRoNrm8pWhyD",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "9a9e3e4f-ea7e-46a7-d355-238ad25abf94"
+        "colab": {},
+        "outputId": "37c0104d-ea84-45c5-8ab6-02c66c7cf714"
       },
       "cell_type": "code",
       "source": [
         "y[:3]"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,25 +412,22 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
     {
       "metadata": {
-        "id": "1SarlxwU8XKD",
+        "id": "cpnHaFe-WhyH",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "e276c486-378c-4227-9644-a998fecef4a5"
+        "colab": {},
+        "outputId": "9711aa97-27f2-4550-a8db-cd9014c458da"
       },
       "cell_type": "code",
       "source": [
         "len(X)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,13 +439,13 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
     {
       "metadata": {
-        "id": "TPjqUM1g8XKI",
+        "id": "u8NGw_8yWhyL",
         "colab_type": "code",
         "colab": {}
       },
@@ -516,7 +459,7 @@
     },
     {
       "metadata": {
-        "id": "q5vQHa638XKN",
+        "id": "KqcYwp7nWhyP",
         "colab_type": "code",
         "colab": {}
       },
@@ -529,38 +472,35 @@
     },
     {
       "metadata": {
-        "id": "nXjcynsm8XKR",
+        "id": "x8UPuZ7JWhyS",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "76a6139d-25bb-4843-b844-e51ee52bfe4b"
+        "colab": {},
+        "outputId": "c8de2af3-bbdf-44a5-c1a5-e25ce7d889a6"
       },
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'1.12.0'"
+              "'1.0.0'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
     {
       "metadata": {
-        "id": "gw889k0x8XKV",
+        "id": "_IKDKT9RWhyY",
         "colab_type": "code",
         "colab": {}
       },
@@ -573,7 +513,7 @@
     },
     {
       "metadata": {
-        "id": "PwGJ6XOs8XKZ",
+        "id": "Uc0oU7nfWhyc",
         "colab_type": "code",
         "colab": {}
       },
@@ -586,7 +526,7 @@
     },
     {
       "metadata": {
-        "id": "jCXhEd7y8XKd",
+        "id": "1fVfYDl9Whyf",
         "colab_type": "code",
         "colab": {}
       },
@@ -599,24 +539,26 @@
     },
     {
       "metadata": {
-        "id": "HiiAfbyO8XKh",
+        "id": "ibbYoG_fWhyh",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "3c15fb1c-ddb0-4b25-ba81-56664c2d3a7f"
+        "colab": {},
+        "outputId": "8f786589-485e-48c3-e6c3-dd7611c89693"
       },
       "cell_type": "code",
       "source": [
         "!conda env list"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/bin/bash: conda: command not found\n"
+            "# conda environments:\r\n",
+            "#\r\n",
+            "base                     /Users/vladimiralencar/anaconda3\r\n",
+            "tf                       /Users/vladimiralencar/anaconda3/envs/tf\r\n",
+            "tf36                  *  /Users/vladimiralencar/anaconda3/envs/tf36\r\n",
+            "\r\n"
           ],
           "name": "stdout"
         }
@@ -624,51 +566,37 @@
     },
     {
       "metadata": {
-        "id": "v15kH6sE8XKm",
+        "id": "gD_h-KyEWhyo",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "008a1cec-9ec4-40e6-d5b1-500176f41d00"
+        "colab": {},
+        "outputId": "31a1b8e9-5650-4e12-a36a-30d36c717857"
       },
       "cell_type": "code",
       "source": [
         "import keras\n",
         "keras.__version__"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'2.2.4'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'keras'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-98cd3281928c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+          ]
         }
       ]
     },
     {
       "metadata": {
-        "id": "QXpYxLDr8XKv",
+        "id": "imeGzR1oWhyv",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "95ee2529-3f16-45ac-a050-86eaf9232dfe"
+        "colab": {},
+        "outputId": "4a7056f0-0568-4386-ba3f-6ea0cfc84e1f"
       },
       "cell_type": "code",
       "source": [
@@ -700,21 +628,28 @@
         "score = loaded_model.evaluate(X, y, verbose=0)\n",
         "print(\"%s: %.2f%%\" % (loaded_model.metrics_names[1], score[1]*100))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Loaded model from disk\n",
-            "acc: 91.02%\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "0",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-4979fedf83f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mloaded_model_json\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m#json_file.close()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mloaded_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_from_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloaded_model_json\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# load weights into new model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/models.py\u001b[0m in \u001b[0;36mmodel_from_json\u001b[0;34m(json_string, custom_objects)\u001b[0m\n",
+            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/layers/__init__.py\u001b[0m in \u001b[0;36mdeserialize\u001b[0;34m(config, custom_objects)\u001b[0m\n",
+            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/utils/generic_utils.py\u001b[0m in \u001b[0;36mdeserialize_keras_object\u001b[0;34m(identifier, module_objects, custom_objects, printable_module_name)\u001b[0m\n",
+            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/models.py\u001b[0m in \u001b[0;36mfrom_config\u001b[0;34m(cls, config, custom_objects)\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 0"
+          ]
         }
       ]
     },
     {
       "metadata": {
-        "id": "ECv12Ko38XK0",
+        "id": "vD_e14uVWhy0",
         "colab_type": "code",
         "colab": {}
       },
@@ -727,7 +662,7 @@
     },
     {
       "metadata": {
-        "id": "TRjvASns8XK5",
+        "id": "hJ2pyYVuWhy5",
         "colab_type": "code",
         "colab": {}
       },
