--- a/keras/Analisa_Acuracia_Modelos_v2.ipynb
+++ b/keras/Analisa_Acuracia_Modelos_v2.ipynb
@@ -10,10 +10,10 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    }
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -40,14 +40,60 @@
       "metadata": {
         "id": "_T8ueKV-HK2U",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 578
+        },
+        "outputId": "2d73a46e-eb8e-43e6-cd34-6632934430f0"
       },
       "cell_type": "code",
       "source": [
-        "!wget\n"
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/dataset.csv\n",
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.h5\n",
+        "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.json"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2019-01-30 23:38:14--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/dataset.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 26840 (26K) [text/plain]\n",
+            "Saving to: ‘dataset.csv’\n",
+            "\n",
+            "\rdataset.csv           0%[                    ]       0  --.-KB/s               \rdataset.csv         100%[===================>]  26.21K  --.-KB/s    in 0.01s   \n",
+            "\n",
+            "2019-01-30 23:38:15 (1.93 MB/s) - ‘dataset.csv’ saved [26840/26840]\n",
+            "\n",
+            "--2019-01-30 23:38:16--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.h5\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 19608 (19K) [application/octet-stream]\n",
+            "Saving to: ‘model.h5’\n",
+            "\n",
+            "model.h5            100%[===================>]  19.15K  --.-KB/s    in 0.01s   \n",
+            "\n",
+            "2019-01-30 23:38:16 (1.93 MB/s) - ‘model.h5’ saved [19608/19608]\n",
+            "\n",
+            "--2019-01-30 23:38:17--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.json\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 1798 (1.8K) [text/plain]\n",
+            "Saving to: ‘model.json’\n",
+            "\n",
+            "model.json          100%[===================>]   1.76K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2019-01-30 23:38:17 (315 MB/s) - ‘model.json’ saved [1798/1798]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -83,15 +129,18 @@
       "metadata": {
         "id": "_MUJG_ziHHFo",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "6429b250-3ae9-4c82-bc12-4963ad25245b"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "e3f18992-f54b-4e9f-b3aa-805e5e54e82d"
       },
       "cell_type": "code",
       "source": [
         "df = pd.read_csv('dataset.csv')\n",
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -216,7 +265,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 5
         }
       ]
     },
@@ -224,8 +273,11 @@
       "metadata": {
         "id": "43y1PhovHHFw",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "53a5c939-c05f-41a2-f03d-d8f56314e8b5"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "7a9786a5-a448-4436-f85e-5de5408e6f3a"
       },
       "cell_type": "code",
       "source": [
@@ -246,7 +298,7 @@
         "df['classe'] = classes\n",
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +423,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 6
         }
       ]
     },
@@ -379,8 +431,11 @@
       "metadata": {
         "id": "o7PlEuqRHHF0",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "022d9bdc-62ec-4f6c-d838-ee36231cb31f"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "outputId": "d8e4d369-f312-498c-93e2-f37bb5a26f92"
       },
       "cell_type": "code",
       "source": [
@@ -388,7 +443,7 @@
         "X = df.loc[:, atributos].values\n",
         "X[:3]"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,7 +460,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 7
         }
       ]
     },
@@ -413,14 +468,17 @@
       "metadata": {
         "id": "IX_ZPMudHHF6",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "93514f40-dea1-442d-c151-30a1d78fe468"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2e860569-3ed5-42d3-c9ff-08ab2af4a829"
       },
       "cell_type": "code",
       "source": [
         "y[:3]"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +490,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 8
         }
       ]
     },
@@ -440,14 +498,17 @@
       "metadata": {
         "id": "F2v41nWnHHF_",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "4450028a-54b3-48b4-d227-c43e989c99ed"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3636e8d6-d01c-42e8-957c-f9ccafc46b29"
       },
       "cell_type": "code",
       "source": [
         "len(X)"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +520,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 9
         }
       ]
     },
@@ -467,15 +528,18 @@
       "metadata": {
         "id": "F0-QTal8HHGD",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "0b1a2e69-2673-4865-f56c-889465c708ae"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "8e99143a-cf23-448f-e6d5-7ed2704ab6d5"
       },
       "cell_type": "code",
       "source": [
         "import keras\n",
         "keras.__version__"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +558,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     },
@@ -502,27 +566,30 @@
       "metadata": {
         "id": "hvH-Y2KIHHGI",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "d37da2b8-36b4-400f-e3dc-db772fc6bd22"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3932138b-4c16-4437-8727-e6592d4afd39"
       },
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'1.10.1'"
+              "'1.12.0'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 11
         }
       ]
     },
@@ -530,8 +597,11 @@
       "metadata": {
         "id": "tt5gUD6bHHGN",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a4571869-f89e-4eb3-8ac9-f5bd01318e3f"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "0e3a627c-1289-44ba-92ca-5671a15627d1"
       },
       "cell_type": "code",
       "source": [
@@ -558,7 +628,7 @@
         "score = loaded_model.evaluate(X, y, verbose=0)\n",
         "print(\"%s: %.2f%%\" % (loaded_model.metrics_names[1], score[1]*100))"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
