--- a/keras/Analisa_Acuracia_Modelos_v2.ipynb
+++ b/keras/Analisa_Acuracia_Modelos_v2.ipynb
@@ -6,7 +6,6 @@
       "name": "Analisa-Acuracia-Modelos-v2.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,23 +27,13 @@
     },
     {
       "metadata": {
-        "id": "ekhD2TEGHNEY",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "## Importação de dados do GitHub"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "_T8ueKV-HK2U",
+        "id": "Ahm1XhReMjT9",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 578
         },
-        "outputId": "2d73a46e-eb8e-43e6-cd34-6632934430f0"
+        "outputId": "ae216b79-f52f-495d-b0e2-9fd2cf7eb757"
       },
       "cell_type": "code",
       "source": [
@@ -52,43 +41,43 @@
         "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.h5\n",
         "!wget https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.json"
       ],
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2019-01-30 23:38:14--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/dataset.csv\n",
+            "--2019-01-31 00:00:49--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/dataset.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 26840 (26K) [text/plain]\n",
-            "Saving to: ‘dataset.csv’\n",
+            "Saving to: ‘dataset.csv.3’\n",
             "\n",
-            "\rdataset.csv           0%[                    ]       0  --.-KB/s               \rdataset.csv         100%[===================>]  26.21K  --.-KB/s    in 0.01s   \n",
+            "\rdataset.csv.3         0%[                    ]       0  --.-KB/s               \rdataset.csv.3       100%[===================>]  26.21K  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2019-01-30 23:38:15 (1.93 MB/s) - ‘dataset.csv’ saved [26840/26840]\n",
+            "2019-01-31 00:00:49 (2.49 MB/s) - ‘dataset.csv.3’ saved [26840/26840]\n",
             "\n",
-            "--2019-01-30 23:38:16--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.h5\n",
+            "--2019-01-31 00:00:50--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.h5\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 19608 (19K) [application/octet-stream]\n",
-            "Saving to: ‘model.h5’\n",
+            "Saving to: ‘model.h5.2’\n",
             "\n",
-            "model.h5            100%[===================>]  19.15K  --.-KB/s    in 0.01s   \n",
+            "model.h5.2          100%[===================>]  19.15K  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2019-01-30 23:38:16 (1.93 MB/s) - ‘model.h5’ saved [19608/19608]\n",
+            "2019-01-31 00:00:50 (1.87 MB/s) - ‘model.h5.2’ saved [19608/19608]\n",
             "\n",
-            "--2019-01-30 23:38:17--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.json\n",
+            "--2019-01-31 00:00:51--  https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/data/model.json\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1798 (1.8K) [text/plain]\n",
-            "Saving to: ‘model.json’\n",
+            "Saving to: ‘model.json.2’\n",
             "\n",
-            "model.json          100%[===================>]   1.76K  --.-KB/s    in 0s      \n",
+            "model.json.2        100%[===================>]   1.76K  --.-KB/s    in 0s      \n",
             "\n",
-            "2019-01-30 23:38:17 (315 MB/s) - ‘model.json’ saved [1798/1798]\n",
+            "2019-01-31 00:00:52 (96.0 MB/s) - ‘model.json.2’ saved [1798/1798]\n",
             "\n"
           ],
           "name": "stdout"
@@ -97,7 +86,7 @@
     },
     {
       "metadata": {
-        "id": "9fFqmri-HHFg",
+        "id": "8EbpyfWDMfTY",
         "colab_type": "code",
         "colab": {}
       },
@@ -113,7 +102,7 @@
     },
     {
       "metadata": {
-        "id": "92yW6k1EHHFl",
+        "id": "0-06YvH6MfTc",
         "colab_type": "code",
         "colab": {}
       },
@@ -127,20 +116,20 @@
     },
     {
       "metadata": {
-        "id": "_MUJG_ziHHFo",
+        "id": "UeHWNNDjMfTf",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "e3f18992-f54b-4e9f-b3aa-805e5e54e82d"
+        "outputId": "71c5e5ea-308d-45e3-dc29-06c60ca736f1"
       },
       "cell_type": "code",
       "source": [
         "df = pd.read_csv('dataset.csv')\n",
         "df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,19 +254,19 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
     {
       "metadata": {
-        "id": "43y1PhovHHFw",
+        "id": "h8d0Kmq-MfTl",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "7a9786a5-a448-4436-f85e-5de5408e6f3a"
+        "outputId": "ba721cdc-53b5-449d-f7da-5c6b66922ccd"
       },
       "cell_type": "code",
       "source": [
@@ -298,7 +287,7 @@
         "df['classe'] = classes\n",
         "df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,19 +412,19 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
     {
       "metadata": {
-        "id": "o7PlEuqRHHF0",
+        "id": "sQ5B6mqAMfTs",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "d8e4d369-f312-498c-93e2-f37bb5a26f92"
+        "outputId": "ee3ac7d1-bfe4-4c8b-85ef-f4bfb1d06250"
       },
       "cell_type": "code",
       "source": [
@@ -443,7 +432,7 @@
         "X = df.loc[:, atributos].values\n",
         "X[:3]"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,25 +449,25 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
     {
       "metadata": {
-        "id": "IX_ZPMudHHF6",
+        "id": "RRYNBfZyMfTx",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "2e860569-3ed5-42d3-c9ff-08ab2af4a829"
+        "outputId": "dd3ab816-814b-41b3-ede8-4fa892a74250"
       },
       "cell_type": "code",
       "source": [
         "y[:3]"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,25 +479,25 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
     {
       "metadata": {
-        "id": "F2v41nWnHHF_",
+        "id": "yyDCzhQQMfT2",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3636e8d6-d01c-42e8-957c-f9ccafc46b29"
+        "outputId": "044132fd-2e1c-4fe1-ff5b-5df4635096be"
       },
       "cell_type": "code",
       "source": [
         "len(X)"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,26 +509,26 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
     {
       "metadata": {
-        "id": "F0-QTal8HHGD",
+        "id": "wOG8DouzMfT_",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "8e99143a-cf23-448f-e6d5-7ed2704ab6d5"
+        "outputId": "1b0a2c08-bd08-4d84-d71c-2bafc872a0c4"
       },
       "cell_type": "code",
       "source": [
         "import keras\n",
         "keras.__version__"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,26 +547,26 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
     {
       "metadata": {
-        "id": "hvH-Y2KIHHGI",
+        "id": "weemPTCxMfUE",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3932138b-4c16-4437-8727-e6592d4afd39"
+        "outputId": "148a4d92-e360-467f-890e-994561c97cd8"
       },
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -589,19 +578,19 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
     {
       "metadata": {
-        "id": "tt5gUD6bHHGN",
+        "id": "waPZID6hMfUJ",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "0e3a627c-1289-44ba-92ca-5671a15627d1"
+        "outputId": "26f2feab-6950-4ea0-8616-aaa8bfdab27f"
       },
       "cell_type": "code",
       "source": [
@@ -628,13 +617,13 @@
         "score = loaded_model.evaluate(X, y, verbose=0)\n",
         "print(\"%s: %.2f%%\" % (loaded_model.metrics_names[1], score[1]*100))"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Loaded model from disk...\n",
-            "acc: 91.93%\n"
+            "acc: 91.02%\n"
           ],
           "name": "stdout"
         }
@@ -642,7 +631,7 @@
     },
     {
       "metadata": {
-        "id": "1ixJQV4PHHGS",
+        "id": "yRvvuMWCMfUM",
         "colab_type": "code",
         "colab": {}
       },
