--- a/keras/CNN_Introducao_Keras.ipynb
+++ b/keras/CNN_Introducao_Keras.ipynb
@@ -38,21 +38,6 @@
     },
     {
       "metadata": {
-        "id": "4KPvJjAiBCxK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "!wget -A pdf,jpg \n",
-        "!mkdir images\n",
-        "!cp *.jpg images"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "T_mi9MrHA_V0",
         "colab_type": "text"
       },
@@ -137,14 +122,14 @@
         "\n",
         "O [MNIST Digits Data Set](http://yann.lecun.com/exdb/mnist/) é muito popular na comunidade de pesquisa da rede neural. São dígitos escritos à mão que foram escaneados e gravados em um dataset eletrônico.\n",
         "\n",
-        "![MINIST](images/mnist.png \"MINIST\")\n",
+        "![MINIST](https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/images/mnist.png \"MINIST\")\n",
         "\n",
         "\n",
         "## CIFAR Data Set\n",
         "\n",
         "Os datasets [CIFAR-10 and CIFAR-100](https://www.cs.toronto.edu/~kriz/cifar.html) também são frequentemente usados pela comunidade de pesquisa de rede neural.\n",
         "\n",
-        "![CIFAR](images/cifar.png \"CIFAR\")\n",
+        "![CIFAR](https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/images/cifar.png \"CIFAR\")\n",
         "\n",
         "O conjunto de dados CIFAR-10 contém imagens divididas em 10 classes. O conjunto de dados CIFAR-100 contém 100 classes em uma hierarquia."
       ]
@@ -161,7 +146,7 @@
         "Podemos usar a arquitetura LeNET-5 principalmente para a classificação de imagens gráficas. Este tipo de rede é semelhante à rede feedforward que examinamos nos capítulos anteriores: fluxo de dados da entrada para a saída. No entanto, a rede LeNET-5 contém vários tipos de camadas diferentes, como mostra a figura abaixo:\n",
         "\n",
         "**A LeNET-5 Network (LeCun, 1998)**\n",
-        "![LENET5](images/lenet5.png \"LENET5\")\n",
+        "![LENET5](https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/images/lenet5.png \"LENET5\")\n",
         "\n",
         "Existem várias diferenças importantes entre uma rede neural feedforward e uma rede LeNET-5:\n",
         "\n",
@@ -188,7 +173,7 @@
       "source": [
         "## Feature Learning e Classificação\n",
         "\n",
-        "![CNN](images/cnn.jpg \"CNN\")"
+        "![CNN](https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/images/cnn.jpg \"CNN\")"
       ]
     },
     {
@@ -222,7 +207,7 @@
         "Em segundo lugar, devemos especificar o passo com o qual deslizamos o filtro. Quando o passo é 1, movemos os filtros um pixel de cada vez. Quando o stride é 2 (ou incomumente 3 ou mais, embora isso seja raro na prática), então os filtros saltam 2 pixels de cada vez, enquanto os desliza. Isso produzirá volumes de saída menores espacialmente.\n",
         "Como veremos em breve, às vezes será conveniente adicionar o volume de entrada com zeros ao redor da borda. O tamanho desse preenchimento é um hiperparâmetro. O bom recurso do preenchimento é que nos permitirá controlar o tamanho espacial dos volumes de saída (mais comumente, como veremos em breve, vamos usá-lo para preservar exatamente o tamanho espacial do volume de entrada, de modo que a largura de entrada e saída e a altura são as mesmas).\n",
         "\n",
-        "![CONV_LAYER](images/conv-layer.gif \"CONV_LAYER\")\n",
+        "![CONV_LAYER](https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/images/conv-layer.gif \"CONV_LAYER\")\n",
         "\n",
         "Exemplo de arquitetura ConvNet para o CIFAR-10: [INPUT - CONV - RELU - POOL - FC]. Em mais detalhes:\n",
         "\n",
@@ -250,7 +235,7 @@
         "\n",
         "Você precisa entender como os filtros convolucionais varrem a saída da camada anterior ou a grade da imagem. A figura abaixo ilustra a varredura:\n",
         "\n",
-        "![GRID](images/cnn_grid.png \"GRID\")\n",
+        "![GRID](https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/images/cnn_grid.png \"GRID\")\n",
         "\n",
         "A figura acima mostra um filtro convolucional com um tamanho de 4 e um tamanho de preenchimento de 1. O tamanho do preenchimento é responsável pelo limite de zeros na área que o filtro varre. Mesmo que a imagem seja realmente 8x7, o preenchimento extra fornece um tamanho de imagem virtual de 9x8 para que o filtro varre. O passo especifica o número de posições nas quais os filtros convolucionais vão parar. Os filtros convolucionais se movem para a direita, avançando pelo número de células especificadas no passo. Uma vez que a extrema direita é alcançada, o filtro convolucional volta para o extremo esquerdo, então ele se move para baixo pelo montante do passo e continua a direita novamente.\n",
         "\n",
@@ -290,7 +275,7 @@
         "\n",
         "É comum inserir periodicamente uma camada de Max Pooling (também chamada de agrupamento) entre as camadas Convolucionais sucessivas em uma arquitetura ConvNet. Sua função é reduzir progressivamente o tamanho espacial da representação para reduzir a quantidade de parâmetros e computação na rede e, portanto, também controlar o overfitting. A Camada de agrupamento opera independentemente em cada fatia de profundidade da entrada e redimensiona-a espacialmente, usando a operação MAX. A forma mais comum é uma camada de agrupamento com filtros de tamanho 2x2 aplicados com um passo de 2 amostras descendentes de cada fatia de profundidade na entrada por 2 ao longo de largura e altura, descartando 75% das ativações. Toda operação MAX, neste caso, receberia um máximo de 4 números (pequena região 2x2 em uma fatia de profundidade). A dimensão da profundidade permanece inalterada. Mais geralmente, a camada de pooling:\n",
         "\n",
-        "![MaxPool](images/conv_maxpool2.png \"MaxPool\")\n",
+        "![MaxPool](https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/images/conv_maxpool2.png \"MaxPool\")\n",
         "\n",
         "Uma camada de Max Pooling possui os seguintes hiperparâmetros:\n",
         "\n",
@@ -307,7 +292,7 @@
         "\n",
         "A profundidade da caixa 3D produzida pela camada max-pool é igual à profundidade que a caixa 3D recebeu como entrada. A configuração mais comum para hiper-parâmetros de uma camada de pool máximo são f = 2 e s = 2. A extensão espacial (f) especifica que as caixas de 2x2 serão dimensionadas para pixels individuais. Destes quatro pixels, o pixel com o valor máximo representará o pixel 2x2 na nova grade. Como os quadrados do tamanho 4 são substituídos pelo tamanho 1, 75% das informações do pixel são perdidas. A figura a seguir mostra esta transformação como uma grade 6x6 torna-se um 3x3:\n",
         "\n",
-        "![MaxPool](images/conv_maxpool.png \"MaxPool\")\n",
+        "![MaxPool](https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/images/conv_maxpool.png \"MaxPool\")\n",
         "\n",
         "Claro, o diagrama acima mostra cada pixel como um único número. Uma imagem em escala de cinza teria essa característica. Para uma imagem RGB, geralmente tomamos a média dos três números para determinar qual pixel tem o valor máximo."
       ]
@@ -330,7 +315,7 @@
         "\n",
         "Esse diagrama resume bem a arquitetura de uma CNN:\n",
         "\n",
-        "![CNN](images/cnn.jpg \"CNN\")"
+        "![CNN](https://raw.githubusercontent.com/vladimiralencar/DeepLearning-LANA/master/keras/images/cnn.jpg \"CNN\")"
       ]
     },
     {
