--- a/tensorflow/2.0/tensorflow2_beginner.ipynb
+++ b/tensorflow/2.0/tensorflow2_beginner.ipynb
@@ -6,14 +6,14 @@
       "name": "tensorflow2-beginner.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "private_outputs": true,
       "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    }
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -127,6 +127,36 @@
     },
     {
       "metadata": {
+        "id": "va8S2UcV7dKK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "906ec5e6-27e0-47bd-beb7-84ff23a7ebdd"
+      },
+      "cell_type": "code",
+      "source": [
+        "tf.__version__"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.0.0-alpha0'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "metadata": {
         "colab_type": "text",
         "id": "7NAbSZiaoJ4z"
       },
@@ -201,12 +231,47 @@
       },
       "cell_type": "code",
       "source": [
-        "model.fit(x_train, y_train, epochs=5)\n",
-        "\n",
-        "model.evaluate(x_test, y_test)"
+        "model.fit(x_train, y_train, epochs=10)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "VnFnEhNQ75Ys",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "b0ad3058-e836-48a6-d136-5123a9b693af"
+      },
+      "cell_type": "code",
+      "source": [
+        "model.evaluate(x_test, y_test)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10000/10000 [==============================] - 1s 88us/sample - loss: 0.0880 - accuracy: 0.9792\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.08795456332344906, 0.9792]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "metadata": {
